--- a/index.html
+++ b/index.html
@@ -40,6 +40,21 @@
     .reaction{position:absolute;left:50%;top:50%;transform:translate(-50%,-50%);font-size:30px;padding:10px 18px;border-radius:12px;background:rgba(0,0,0,0.6);opacity:0;transition:opacity .25s,transform .35s}
     .reaction.show{opacity:1;transform:translate(-50%,-90%)}
 
+    /* effet Noctambule */
+    .noctambule{
+      position:absolute;
+      top:50%;left:50%;
+      transform:translate(-50%,-50%);
+      font-size:60px;
+      font-weight:bold;
+      color:#e0d4ff;
+      text-shadow:0 0 25px #9b59b6,0 0 45px #fff;
+      opacity:0;
+      transition:opacity 0.8s ease;
+      z-index:20;
+    }
+    .noctambule.show{opacity:1;}
+
     footer{margin-top:14px;color:var(--muted);font-size:13px}
     @media (max-width:900px){.board{grid-template-columns:1fr;}.panel{padding:10px}}
   </style>
@@ -64,6 +79,7 @@
           </div>
           <div class="garnish" id="garnish">✨</div>
           <div class="reaction" id="reaction">OK</div>
+          <div id="noctambule" class="noctambule">Noctambule 🗝️</div>
         </div>
 
         <div class="controls">
@@ -98,7 +114,10 @@
       {id:'corbeau', name:'Plume de corbeau', abbr:'🪶', color:'#333333'},
       {id:'paon', name:'Plume de paon', abbr:'🦚', color:'#1abc9c'},
       {id:'herbes', name:'Herbes anciennes', abbr:'🌿', color:'#2ecc71'},
-      {id:'cristal', name:'Cristaux lunaires', abbr:'💎', color:'#5dade2'}
+      {id:'cristal', name:'Cristaux lunaires', abbr:'💎', color:'#5dade2'},
+      {id:'serpent', name:'Venin de serpent', abbr:'🐍', color:'#27ae60'},
+      {id:'etoile', name:'Poussière d’étoile', abbr:'🌌', color:'#8e44ad'},
+      {id:'rose', name:'Pétale de rose noire', abbr:'🌹', color:'#c0392b'}
     ];
 
     const RECIPES = [
@@ -117,6 +136,7 @@
     const stateEl=document.getElementById('state');
     const reactionEl=document.getElementById('reaction');
     const garnishEl=document.getElementById('garnish');
+    const noctambuleEl=document.getElementById('noctambule');
 
     INGREDIENTS.forEach(ing=>{
       const div=document.createElement('div');
@@ -143,9 +163,9 @@
 
     function pour(id,amount){
       if(state.pours.length>=3){showReaction('Max 3 ingrédients !');return;}
-      if(state.volume+amount>100){showReaction('Le chaudron déborde !');return;}
       state.pours.push({id,amount});
-      state.volume+=amount;
+      state.volume+=Math.round(100/3); // jauge répartie sur 3 ingrédients
+      if(state.volume>100)state.volume=100;
       updateGlass();
       showReaction(`Ajout de ${id}`);
     }
@@ -153,7 +173,7 @@
     function undo(){
       const last=state.pours.pop();
       if(!last){showReaction('Rien à annuler');return;}
-      state.volume-=last.amount;
+      state.volume-=Math.round(100/3);
       if(state.volume<0)state.volume=0;
       updateGlass();
       showReaction(`Retiré ${last.id}`);
@@ -162,6 +182,7 @@
     function clearGlass(){
       state.pours=[];state.volume=0;state.shaken=false;
       updateGlass();showReaction('Chaudron vidé');
+      noctambuleEl.classList.remove("show");
     }
 
     function serve(){
@@ -187,7 +208,8 @@
       const ids=Object.keys(composition);
       // cas spécial noctambule
       if(ids.includes('corbeau')&&ids.includes('paon')&&ids.includes('dragon')){
-        return {text:'Un effet étrange apparaît... NOCTAMBULE 🌑',score:100};
+        noctambuleEl.classList.add("show");
+        return {text:'Noctambule 🗝️',score:100};
       }
       if(JSON.stringify(composition)==='{}')return {text:'Inerte',score:0};
       const randomEffects=[
@@ -205,7 +227,7 @@
       const r=reactionEl;
       r.textContent=score.text;
       r.classList.add('show');
-      garnishEl.textContent=score.text.includes('NOCTAMBULE')?'🌑':'✨';
+      garnishEl.textContent=score.text.includes('Noctambule')?'🌑':'✨';
       setTimeout(()=>r.classList.remove('show'),1600);
     }
 
