--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       {id:'rose', name:'Pétale de rose noire', abbr:'🌹', color:'#c0392b'},
       {id:'serpent', name:'Venin de serpent', abbr:'🐍', color:'#27ae60'},
       {id:'corbeau', name:'Plume de corbeau', abbr:'🪶', color:'#333333'},
-      {id:'dragon', name:'Écaille de dragon', abbr:'🐉', color:'#d94b6a'},
+      {id:'dragon', name:'Larme de dragon', abbr:'🐉', color:'#d94b6a'},
       {id:'cristal', name:'Cristaux lunaires', abbr:'💎', color:'#5dade2'},
       {id:'paon', name:'Plume de paon', abbr:'🦚', color:'#1abc9c'},
       {id:'feu', name:'Souffle de feu', abbr:'🔥', color:'#e67e22'},
