--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
       {id:'fee', name:'Poussière de fée', abbr:'✨', color:'#f9d6ff'},
       {id:'rose', name:'Pétale de rose noire', abbr:'🌹', color:'#c0392b'},
       {id:'serpent', name:'Venin de serpent', abbr:'🐍', color:'#27ae60'},
-      {id:'corbeau', name:'Plume de corbeau', abbr:'🪶', color:'#333333'},
-      {id:'dragon', name:'Plume de hiboux', abbr:'🪶', color:'#d94b6a'},
+      {id:'corbeau', name:'Plume de corbeau', abbr:'🐦‍⬛', color:'#333333'},
+      {id:'hiboux', name:'Plume de hiboux', abbr:'🪶', color:'#d94b6a'},
       {id:'cristal', name:'Cristaux lunaires', abbr:'💎', color:'#5dade2'},
       {id:'paon', name:'Plume de paon', abbr:'🦚', color:'#1abc9c'},
       {id:'feu', name:'Souffle de feu', abbr:'🔥', color:'#e67e22'},
